# fleet-canbus

./: .gitignore  Dockerfile.simulator  Dockerfile.subscriber  README.md  docker-compose.public.yml  docker-compose.scale.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: mosquitto.conf
config/caddy/: Caddyfile
config/grafana/dashboards/: fleet_overview.json  pipeline_health.json
config/grafana/provisioning/alerting/: contact-points.yaml  policies.yaml  rules.yaml
config/grafana/provisioning/dashboards/: fleet.yaml
config/grafana/provisioning/datasources/: prometheus.yaml  timescaledb.yaml
config/prometheus/: prometheus.yml
config/timescaledb/: init.sql
docs/: architecture.md  deployment.md
src/fleet_canbus/: __init__.py  cli.py  publisher.py  simulator.py
src/fleet_canbus/dbc/: battery_fleet.dbc
src/fleet_subscriber/: __init__.py  cli.py  db_writer.py  metrics.py  subscriber.py
tests/: test_cli.py  test_db_writer.py  test_dbc_parse.py  test_metrics.py  test_publisher.py  test_simulator.py  test_subscriber.py  test_subscriber_session.py
tests/integration/: test_reliability.py
