[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-canbus"
version = "0.1.0"
description = "Synthetic CAN-bus telemetry pipeline for a battery fleet"
requires-python = ">=3.11"
dependencies = [
    "cantools>=39.4",
    "python-can>=4.3",
    "paho-mqtt>=2.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
fleet-sim = "fleet_canbus.cli:main"
fleet-sub = "fleet_subscriber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
